<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LanguageActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="289dp"
        android:layout_height="62dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="108dp"
        android:text="@string/choose_language_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="93dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/welcome_text"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/armenianButton"
        android:layout_width="207dp"
        android:layout_height="101dp"
        android:layout_marginTop="48dp"
        android:text="@string/armenian_button_choice"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:backgroundTint="#C12D5F" />

    <Button
        android:id="@+id/frenchButton"
        android:layout_width="207dp"
        android:layout_height="101dp"
        android:layout_marginTop="200dp"
        android:text="@string/french_button_choice"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:backgroundTint="#3F51B5"/>

    <Button
        android:id="@+id/exitButton"
        android:layout_width="87dp"
        android:layout_height="89dp"
        android:layout_marginTop="472dp"
        android:text="@string/logout_button_choice"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:backgroundTint="#584875" />

    <Button
        android:id="@+id/createNewWordButton"
        android:layout_width="151dp"
        android:layout_height="95dp"
        android:layout_marginTop="364dp"
        android:backgroundTint="#0E0D0E"
        android:text="@string/create_a_new_word"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:visibility="invisible"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>